sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:19: error: not found: value getNombreValerus
  for (j <- 0 to getNombreValerus()-1){
                 ^